Rapid Prd/src/objects/BOOP__c.object
<CustomObject>
    <description>Marble Quotes</description>
    <fields>
        <fullName>Accountable_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountable Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accountable_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountable Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accountable_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountable Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileCap_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgileCap Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileCap_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgileCap Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileCap_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgileCap Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aquila_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aquila Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aquila_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aquila Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aquila_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aquila Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Atlantis_Mortgage_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atlantis Mortgage Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Atlantis_Mortgage_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atlantis Mortgage Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Atlantis_Mortgage_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atlantis Mortgage Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ave_Number_of_Deposits__c</fullName>
        <label>Ave Number of Deposits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Balance__c</fullName>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Negative_Days__c</fullName>
        <label>Average Monthly Negative Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BFS_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFS Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BFS_Quote_Date__c</fullName>
        <label>BFS Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BFS_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFS Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BFS_Submitted_Date__c</fullName>
        <label>BFS Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BFS_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFS Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOBA_NOTES__c</fullName>
        <label>BOBA NOTES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOOP_Owner_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Broker_Out_Ops_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Discharge_Date__c</fullName>
        <label>Bankruptcy Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Change_Text__c</fullName>
        <label>Bid Change Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Broker_Out_Addendum__c</fullName>
        <formula>Marble__r.Opportunity_Reference__r.Campaign.Broker_Out_Addendum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Out Addendum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Out_New_Split__c</fullName>
        <formula>Marble__r.Opportunity_Reference__r.Campaign.Broker_Out_New_Split__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Out New Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Out_Renewal_Split__c</fullName>
        <formula>Marble__r.Opportunity_Reference__r.Campaign.Broker_Out_Renewal_Split__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Out Renewal Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Open_Date__c</fullName>
        <label>Business Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CNH_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNH Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNH_Quote_Date__c</fullName>
        <label>CNH Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CNH_Submitted_Date__c</fullName>
        <label>CNH Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CNH_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNH Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNH_quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNH quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Finance_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Finance Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Finance_Quote_Date__c</fullName>
        <label>Construction Finance Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Construction_Finance_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Finance Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Finance_Submitted_Date__c</fullName>
        <label>Construction Finance Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Construction_Finance_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Finance Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <label>Contract Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contract_Received_CB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Received__c</fullName>
        <label>Contract Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Requested__c</fullName>
        <label>Contract Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contracted_Commission__c</fullName>
        <label>Contracted Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted_Fees__c</fullName>
        <label>Contracted Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted_Interval__c</fullName>
        <label>Contracted Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Interval</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracted_Loan_Amount__c</fullName>
        <label>Contracted Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted_Number_of_Payments__c</fullName>
        <label>Contracted Number of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_Payback_Amount__c</fullName>
        <label>Contracted Payback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted_Payment_Amount__c</fullName>
        <label>Contracted Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted_Term__c</fullName>
        <label>Contracted Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credibly_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credibly Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credibly_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credibly Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credibly_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credibly Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Inquiries__c</fullName>
        <label>Credit Inquiries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECG_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECG Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECG_Quote_Date__c</fullName>
        <label>ECG Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECG_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECG Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECG_Submitted_Date__c</fullName>
        <label>ECG Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECG_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECG Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FICO_Score__c</fullName>
        <label>FICO Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factor_Finders_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Factor Finders Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factor_Finders_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Factor Finders Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factor_Finders_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Factor Finders Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factor_Rate_1__c</fullName>
        <formula>Contracted_Payback_Amount__c / Contracted_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factor Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factor_Rate__c</fullName>
        <label>Factor Rate</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fora_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fora Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fora_Quote_Date__c</fullName>
        <label>Fora Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fora_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fora Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fora_Submitted_Date__c</fullName>
        <label>Fora Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fora_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fora Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundKite_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FundKite Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundKite_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FundKite Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundKite_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FundKite Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Amental_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund-Amental Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Amental_Quote_Date__c</fullName>
        <label>Fund-Amental Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fund_Amental_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund-Amental Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Amental_Submitted_Date__c</fullName>
        <label>Fund-Amental Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fund_Amental_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund-Amental Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundation_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundation Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundation_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundation Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundation_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundation Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundbox_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundbox Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundbox_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundbox Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundbox_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundbox Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Circle_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Circle Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Circle_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Circle Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Circle_Submitted_Date__c</fullName>
        <label>Funding Circle Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Funding_Circle_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Circle Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundworks_Quote_Date__c</fullName>
        <label>Fundworks Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Greenwich_Capital_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Greenwich Capital Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Greenwich_Capital_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Greenwich Capital Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Greenwich_Capital_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Greenwich Capital Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headway_Capital_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headway Capital Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headway_Capital_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headway Capital Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headway_Capital_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headway Capital Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headway_Quote_Date__c</fullName>
        <label>Headway Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Headway_Submitted_Date__c</fullName>
        <label>Headway Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>How_much_in_Competitor_Balances__c</fullName>
        <label>How much in Competitor Balances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Financial_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interface Financial Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface_Financial_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interface Financial Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface_Financial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interface Financial Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iron_Horse_Credit_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Iron Horse Credit Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iron_Horse_Credit_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Iron Horse Credit Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iron_Horse_Credit_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Iron Horse Credit Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KatalystFP_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KatalystFP Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KatalystFP_Quote_Date__c</fullName>
        <label>KatalystFP Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KatalystFP_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KatalystFP Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KatalystFP_Submitted_Date__c</fullName>
        <label>KatalystFP Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KatalystFP_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KatalystFP Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knight_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knight Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knight_Quote_Date__c</fullName>
        <label>Knight Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Knight_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knight Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knight_Submitted_Date__c</fullName>
        <label>Knight Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Knight_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knight Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LenCred_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LenCred Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LenCred_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LenCred Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LenCred_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LenCred Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendio_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendio Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendio_Quote_Date__c</fullName>
        <label>Lendio Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lendio_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendio Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendio_Submitted_Date__c</fullName>
        <label>Lendio Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lendio_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendio Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendistry_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendistry Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendistry_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendistry Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendistry_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendistry Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendr_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendr Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendr_Quote_Date__c</fullName>
        <label>Lendr Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lendr_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendr Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendr_Qutoed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendr Qutoed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendr_Submitted_Date__c</fullName>
        <label>Lendr Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lendr_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendr Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Levy_Associates_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Levy &amp; Associates Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Levy_Associates_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Levy &amp; Associates Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Levy_Associates_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Levy &amp; Associates Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libertas_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libertas Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libertas_Quote_Date__c</fullName>
        <label>Libertas Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Libertas_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libertas Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libertas_Submitted_Date__c</fullName>
        <label>Libertas Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Libertas_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libertas Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAC_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAC Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAC_Quote_Date__c</fullName>
        <label>MAC Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MAC_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAC Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAC_Submitted_Date__c</fullName>
        <label>MAC Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MAC_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAC Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marble_Industry__c</fullName>
        <formula>Marble__r.Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marble Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marble_Owner_Id__c</fullName>
        <label>Marble Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marble__c</fullName>
        <label>Marble</label>
        <referenceTo>Marble__c</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max_Upsell__c</fullName>
        <label>Max Upsell</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Sales__c</fullName>
        <label>Monthly Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>National_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Quote_Date__c</fullName>
        <label>National Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>National_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Submitted_Date__c</fullName>
        <label>National Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>National_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Competitor_Balances__c</fullName>
        <label>Number of Competitor Balances</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Broker_Out_Op</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Email_Address__c</fullName>
        <label>Partner Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Phone_Number__c</fullName>
        <formula>Marble__r.Opportunity_Reference__r.Campaign.ISO_Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Company</label>
        <referenceTo>Lost_Boy__c</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <defaultValue>&quot;Loan&quot;</defaultValue>
        <description>Quote Type</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platinum_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platinum_Quote_Date__c</fullName>
        <label>Platinum Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Platinum_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platinum_Submitted_Date__c</fullName>
        <label>Platinum Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Platinum_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principis_Capital_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Principis Capital Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principis_Capital_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Principis Capital Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principis_Capital_Submitted_Date__c</fullName>
        <label>Principis Capital Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Principis_Capital_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Principis Capital Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principis_Quote_Date__c</fullName>
        <label>Principis Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Fees__c</fullName>
        <label>Quote Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Number_of_Payments__c</fullName>
        <label>Quote Number of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Payback_Amount__c</fullName>
        <label>Quote Payback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Payment_Amount__c</fullName>
        <label>Quote Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Payment_Interval__c</fullName>
        <label>Quote Payment Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Interval</valueSetName>
        </valueSet>
    </fields>
</CustomObject>